PLATFORM-6436| remove duplicate endpoints
